Fix visual issue with inputs when in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,11 @@ h1 {
     line-height: 1.1;
 }
 
+input {
+    background-color: #f9f9f9;
+    color: #242424;
+}
+
 button {
     border-radius: 8px;
     border: 2px solid transparent;
@@ -36,9 +41,11 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
+
 button:hover {
     border-color: $quaternary-color;
 }
+
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
